# Biginteger

./: .gitignore  .travis.yml  CMakeLists.txt
include/: bigint.hpp
src/: bigint.cpp
tests/: CMakeLists.txt  README  README.md
tests/calculus/: CMakeLists.txt  sum.cpp
tests/comparison/: CMakeLists.txt  comparison.cpp
tests/construction/: CMakeLists.txt  construction.cpp  construction1.cpp  construction2.cpp  construction3.cpp  construction4.cpp
